--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-#quarkus.datasource.db-kind=postgresql
-#quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.datasource.db-kind=postgresql
+quarkus.hibernate-orm.database.generation=drop-and-create
 
-#quarkus.datasource.username=quarkus_test
-#quarkus.datasource.password=quarkus_test
-#quarkus.datasource.jdbc.url=jdbc:postgresql:quarkus_test
+quarkus.datasource.username=quarkus_test
+quarkus.datasource.password=quarkus_test
+quarkus.datasource.jdbc.url=jdbc:postgresql:quarkus_test
 
 #quarkus.ssl.native=false
 #quarkus.hibernate-search-orm.elasticsearch.version=7
