--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 quarkus.datasource.db-kind=postgresql
 quarkus.hibernate-orm.database.generation=drop-and-create
 
-quarkus.datasource.username=quarkus_test
-quarkus.datasource.password=quarkus_test
-quarkus.datasource.jdbc.url=jdbc:postgresql:quarkus_test
+#quarkus.datasource.username=quarkus_test
+#quarkus.datasource.password=quarkus_test
+#quarkus.datasource.jdbc.url=jdbc:postgresql:quarkus_test
 
 #quarkus.ssl.native=false
 #quarkus.hibernate-search-orm.elasticsearch.version=7
@@ -16,3 +16,19 @@ quarkus.datasource.jdbc.url=jdbc:postgresql:quarkus_test
 
 #quarkus.log.category."org.hibernate.service.internal.AbstractServiceRegistryImpl".level=ERROR
 #quarkus.log.category."com.arjuna.ats.arjuna".level=ERROR
+quarkus.banner.enabled=false
+
+quarkus.container-image.insecure=true
+quarkus.kubernetes-client.trust-certs=true
+quarkus.openshift.expose=true
+quarkus.openshift.env.secrets=postgresql
+quarkus.openshift.env.mapping.database-name.from-secret=postgresql
+quarkus.openshift.env.mapping.database-name.with-key=database-name
+quarkus.openshift.env.mapping.database-username.from-secret=postgresql
+quarkus.openshift.env.mapping.database-username.with-key=database-user
+quarkus.openshift.env.mapping.database-password.from-secret=postgresql
+quarkus.openshift.env.mapping.database-password.with-key=database-password
+
+%kube.quarkus.datasource.reactive.url=postgresql://postgresql:5432/${DATABASE_NAME}
+%kube.quarkus.datasource.username=${DATABASE_USERNAME}
+%kube.quarkus.datasource.password=${DATABASE_PASSWORD}
