--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,14 +5,14 @@ quarkus.datasource.username=quarkus_test
 quarkus.datasource.password=quarkus_test
 quarkus.datasource.jdbc.url=jdbc:postgresql:quarkus_test
 
-#quarkus.ssl.native=false
-#quarkus.hibernate-search-orm.elasticsearch.version=7
-#quarkus.hibernate-search-orm.schema-management.strategy=drop-and-create
-#quarkus.hibernate-search-orm.automatic-indexing.synchronization.strategy=sync
+quarkus.ssl.native=false
+quarkus.hibernate-search-orm.elasticsearch.version=7
+quarkus.hibernate-search-orm.schema-management.strategy=drop-and-create
+quarkus.hibernate-search-orm.automatic-indexing.synchronization.strategy=sync
 
-#%prod.quarkus.hibernate-orm.database.generation=none
-#%prod.quarkus.hibernate-orm.sql-load-script=no-file
-#%prod.quarkus.hibernate-search-orm.schema-management.strategy=none
+%prod.quarkus.hibernate-orm.database.generation=none
+%prod.quarkus.hibernate-orm.sql-load-script=no-file
+%prod.quarkus.hibernate-search-orm.schema-management.strategy=none
 
-#quarkus.log.category."org.hibernate.service.internal.AbstractServiceRegistryImpl".level=ERROR
-#quarkus.log.category."com.arjuna.ats.arjuna".level=ERROR
+quarkus.log.category."org.hibernate.service.internal.AbstractServiceRegistryImpl".level=ERROR
+quarkus.log.category."com.arjuna.ats.arjuna".level=ERROR
